@@ -457,7 +457,7 @@ class DiffCommand(CvcCommand):
         if argSet or not args or len(args) > 2: return self.usage()
 
         args[0] = repos
-        checkin.diff(*args)
+        return checkin.diff(*args)
 _register(DiffCommand)
 
 class LogCommand(CvcCommand):
@@ -711,7 +711,7 @@ class CvcMain(command.MainHandler):
         if profile:
             prof.stop()
         if log.errorOccurred():
-            sys.exit(1)
+            sys.exit(2)
         return rv
 
 
@@ -756,7 +756,7 @@ def main(argv=sys.argv):
             openpgpfile.PGPError), e:
         if str(e):
             log.error(str(e))
-            sys.exit(1)
+            sys.exit(2)
         else:
             raise
     except KeyboardInterrupt, e:
